Added basic LoginPresenter to Presentation library and LoginActivity to Android app.

--- a/src/LMcNally.Xamarin.MvpDemo.Droid/LMcNally.Xamarin.MvpDemo.Droid.csproj
+++ b/src/LMcNally.Xamarin.MvpDemo.Droid/LMcNally.Xamarin.MvpDemo.Droid.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="Views\LoginActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -62,7 +62,7 @@
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml">
+    <AndroidResource Include="Resources\layout\LoginView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
@@ -74,6 +74,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LMcNally.Xamarin.MvpDemo.Presentation\LMcNally.Xamarin.MvpDemo.Presentation.csproj">
+      <Project>{42ee11d4-c584-42a9-a7b9-c8ab972c759e}</Project>
+      <Name>LMcNally.Xamarin.MvpDemo.Presentation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
