--- a/src/LMcNally.Xamarin.MvpDemo.Presentation/LMcNally.Xamarin.MvpDemo.Presentation.csproj
+++ b/src/LMcNally.Xamarin.MvpDemo.Presentation/LMcNally.Xamarin.MvpDemo.Presentation.csproj
@@ -36,7 +36,9 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Presenters\LoginPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ILoginView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
