--- a/src/LMcNally.Xamarin.MvpDemo.Droid/LMcNally.Xamarin.MvpDemo.Droid.csproj
+++ b/src/LMcNally.Xamarin.MvpDemo.Droid/LMcNally.Xamarin.MvpDemo.Droid.csproj
@@ -53,13 +53,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MvpDemoApplication.cs" />
+    <Compile Include="Services\NavigationService.cs" />
     <Compile Include="Views\LoginActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MainActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\MainView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\LoginView.axml">
