--- a/src/LMcNally.Xamarin.MvpDemo.Presentation/LMcNally.Xamarin.MvpDemo.Presentation.csproj
+++ b/src/LMcNally.Xamarin.MvpDemo.Presentation/LMcNally.Xamarin.MvpDemo.Presentation.csproj
@@ -36,9 +36,15 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Presenters\BasePresenter.cs" />
     <Compile Include="Presenters\LoginPresenter.cs" />
+    <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\INavigationService.cs" />
     <Compile Include="Views\ILoginView.cs" />
+    <Compile Include="Views\IMainView.cs" />
+    <Compile Include="Views\INavigationView.cs" />
+    <Compile Include="Views\IActionView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
