Added simple sign-up screen and modified navigation to not return to login or signup once in the main application UI.

--- a/src/LMcNally.Xamarin.MvpDemo.Droid/LMcNally.Xamarin.MvpDemo.Droid.csproj
+++ b/src/LMcNally.Xamarin.MvpDemo.Droid/LMcNally.Xamarin.MvpDemo.Droid.csproj
@@ -59,11 +59,15 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\MainActivity.cs" />
+    <Compile Include="Views\SignUpActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\MainView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\SignUpView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
