--- a/src/LMcNally.Xamarin.MvpDemo.Presentation/LMcNally.Xamarin.MvpDemo.Presentation.csproj
+++ b/src/LMcNally.Xamarin.MvpDemo.Presentation/LMcNally.Xamarin.MvpDemo.Presentation.csproj
@@ -39,12 +39,14 @@
     <Compile Include="Presenters\BasePresenter.cs" />
     <Compile Include="Presenters\LoginPresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
+    <Compile Include="Presenters\SignUpPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\INavigationService.cs" />
     <Compile Include="Views\ILoginView.cs" />
     <Compile Include="Views\IMainView.cs" />
     <Compile Include="Views\INavigationView.cs" />
     <Compile Include="Views\IActionView.cs" />
+    <Compile Include="Views\ISignUpView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
